--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,7 +8,8 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
 
-jwt-secret-key: hkajhdkahdkhkshhskajdhkahdahshsakhhhhhhhhdsddhahkshj
+jwt:
+  secret-key: hkajhdkahdkhkshhskajdhkahdahshsakhhhhhhhhdsddhahkshj
